<resources>
    <string name="app_name">Event Checkin</string>
    <string name="content_description_favorite">favorite icon</string>
    <string name="search">search</string>
    <string name="content_description_search">search something</string>
    <string name="favorite">favorite</string>
    <string name="more">more</string>
    <string name="content_description_more">more information</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    drawer-->
    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_name">Magaiver</string>
    <string name="email_user">magaiwer@hotmail.com.br</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="month_select">month</string>
    <string name="nav_category">Category</string>
    <string name="nav_balance">balance</string>
    <string name="nav_account">Account</string>


    <!--    activity_transaction_list -->
    <string name="activity_event_list_title"> Events </string>
    <string name="category_name">Category Name</string>

    <!--    activity_transaction -->
    <string name="activity_Event_title"> New Event </string>
    <string name="fab_content_desc">Action butto to create new transactions</string>
    <string name="transaction_name">Name</string>
    <string name="transaction_amount">Amount</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description event</string>
    <string name="nav_event">Events</string>
    <string name="synchronize">Synchronize</string>
    <string name="Checkin_Title">Checkin</string>
    <string name="txtBtnSend">Send</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="eventos_logo">eventos</string>

    <string name="btnRegister">Register</string>
    <string name="not_match_password">Confirm password doesn\'t match with password</string>
    <string name="user_registrated_succ">User registered with success</string>
    <string name="user_registrated_error">Failed register user</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="question_register">Don\'t have account?</string>
    <string name="link_register">Register here</string>
    <string name="prompt_name">Name</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sw_off">Cancel</string>
    <string name="sw_on">Subscribe</string>
    <string name="logout">Logout</string>
    <string name="btnQrcode">Check-in</string>

    <string name="barcode_result" translatable="false">Barcode detected.\n%1$s</string>
    <string name="error_scanner_cancelled" translatable="false">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted" translatable="false">Camera permission is not granted.</string>
    <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
    <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
    <string name="txt_desc_event">Description \n%1$s</string>
    <string name="txt_label_date">Date  \n%1$s</string>
    <string name="txt_label_date_close">Subscription until  \n%1$s</string>
    <string name="txt_location">Location %1$s</string>
    <string name="error_checkin_location">You current location differ event localization</string>
    <string name="checkin_succefully">Check In with successfully</string>


</resources>