<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:id="@+id/group_header"
        android:checkableBehavior="single">

        <item android:id="@+id/nav_account_balance"
            android:title="@string/nav_balance"
            android:icon="@drawable/ic_account_balance_black_24dp"/>

        <item android:id="@+id/nav_account"
            android:title="@string/nav_account"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"/>

        <item android:id="@+id/nav_category"
            android:title="@string/nav_category"
            android:icon="@drawable/ic_view_module_black_24dp"/>
    </group>

</menu>