<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="dev.magaiver.eventcheckin.presentation.ui.login.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:autofillHints="@string/prompt_name"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                tools:layout_editor_absoluteX="35dp" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="89dp" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="159dp" />

            <EditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="242dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btnRegister"
            />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>